test/corpus/identifier.txt
===
valid names
===

CamelCase: string
$after: string
snake_case: string
some_456_Numbers: string

---

(source_file 
 (field (label (identifier)) (value (string_type))) 
 (field (label (identifier)) (value (string_type))) 
 (field (label (identifier)) (value (string_type))) 
 (field (label (identifier)) (value (string_type))))
