test/corpus/num_lit.txt
===
Numeric literals
===

i1: 42
i2: 1.5G
i3: 1.3Ki
i4: 170_141_183_460_469_231_731_687_303_715_884_105_727
i5: 0xBad_Face
i6: 0o755
i7: 0b0101_0001


f1: 0.
f2: 72.40
f3: 072.40
f4: 2.71828
f5: 1.e+0
f6: 6.67428e-11
f7: 1E6
f8: .25
f9: .12345E+5

---

(source_file 
 (field (label (identifier)) (value (int_lit))) 
 (field (label (identifier)) (value (int_lit))) 
 (field (label (identifier)) (value (int_lit))) 
 (field (label (identifier)) (value (int_lit))) 
 (field (label (identifier)) (value (int_lit))) 
 (field (label (identifier)) (value (int_lit))) 
 (field (label (identifier)) (value (int_lit)))

 (field (label (identifier)) (value (float_lit))) 
 (field (label (identifier)) (value (float_lit))) 
 (field (label (identifier)) (value (float_lit))) 
 (field (label (identifier)) (value (float_lit))) 
 (field (label (identifier)) (value (float_lit))) 
 (field (label (identifier)) (value (float_lit))) 
 (field (label (identifier)) (value (float_lit)))
 (field (label (identifier)) (value (float_lit)))
 (field (label (identifier)) (value (float_lit))))
