test/corpus/statements.txt
=======
Package 
=======

package foo

---

(source_file
  (package_clause (package_identifier)))

=======
Imports
=======

import (
		f "github.com/foo/f"
		"encoding/json"
)

---

(source_file 
	(import_declaration
		(import_spec_list 
			(import_spec (package_identifier) (string_lit))
			(import_spec (string_lit)))))

===
Top level let binding
===

let X="foo"

---

(source_file (let_expression (identifier) (value (string_lit))))
